--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,104 @@
+@import url('https://fonts.googleapis.com/css2?family=Fugaz+One&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 body {
     background: tomato;
+
+}
+h2 {
+    font-size: 1.7em;
+}
+.wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+.title {
+    border: 3px solid black;
+    padding: 2em;
+    border-radius: 10px;
+    background-color: rgb(0, 0, 0);
+    color: aliceblue;
+    box-shadow: 0px 0px 1000px 2px #fbff00;
+    
+}
+.Oauth {
+    display: flex;
+    gap: 5px
+}
+input {
+    border-radius: 5px;
+    height: 2em;
+    width: 78%;
+    border: none;
+    background: url("./src/email2.png") no-repeat 10px center;
+    background-size: 20px 20px;
+    padding: 10px 40px;
+    background-color: white;
+}
+.forgotPassword {
+    display: block;
+    padding: 10px;
+    color: aliceblue;
+}
+.submit {
+    height: 2.3em;
+    border-radius: 10px;
+    border: none;
+
+    width: 80%;
+    font-weight: 500;
+    font-size: medium;
+}
+.inter {
+    font-family: "Inter", serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+}
+.roboto {
+    font-family: "Roboto", serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+
+}
+.fugaz-one-regular {
+  font-family: "Fugaz One", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.signin {
+    font-size: 1em;
+    padding: 10px;
+    margin-bottom: 4px;
+    margin-right: 2px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border-radius: 6px;
+    border: none;
+}
+.buttonWrapper {
+    display: flex;
+    justify-content: center;
+}
+.logo {
+    height: 30px;
+    width: 30px;
+}
+#Password {
+    
+    background: url("./src/password2.png") no-repeat 10px center;
+     background-size: 20px 20px;
+    padding: 10px 40px;
+    padding: 10px 40px;
+    background-color: white;
+}
+
+button {
+    transition: box-shadow 0.3s ease-out;
+}   
+button:hover {
+    box-shadow: 0 0 15px #fbff00
 }
