--- a/StyleSheet/form.css
+++ b/StyleSheet/form.css
@@ -1,5 +1,7 @@
 /* Global Styling */
 /* Global Styling */
+@import url('https://fonts.googleapis.com/css2?family=Fugaz+One&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 body {
     margin: 0;
     padding: 0;
@@ -8,8 +10,10 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    /* height: 100vh; */
     color: #fff;
+    gap: 100px;
+
 }
 
 /* Wrapper */
@@ -22,14 +26,18 @@ body {
     border-radius: 15px;
     box-shadow: 0px 4px 15px rgba(251, 255, 0, 0.6);
     text-align: center;
+    overflow: auto;
 }
-
+h1 {
+    justify-content: start;
+}
 /* Title Styling */
 .title h2 {
     font-family: "Fugaz One", cursive;
     font-size: 2rem;
     margin-bottom: 10px;
     color: #fbff00;
+    
 }
 
 .title h3 {
@@ -44,10 +52,14 @@ form {
     flex-direction: column;
     gap: 1rem;
     margin-top: 1rem;
+    background-color: #202020;
+    padding: 100px;
+    border-radius: 15px;
+
 }
 
 /* Input Fields */
-input, select, textarea {
+input, textarea {
     width: 100%;
     padding: 10px;
     border-radius: 8px;
